infra/trellify/base/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: trellify-server
spec:
  selector:
    app: trellify-server
  ports:
    - name: http
      port: 3000
      targetPort: http
---
apiVersion: v1
kind: Service
metadata:
  name: trellify-client
spec:
  selector:
    app: trellify-client
  ports:
    - name: http
      port: 80
      targetPort: http
